syntax = "proto3";

package mailing;

service MailingService {
    rpc SendEmail(SendEmailRequest) returns (SendEmailResponse);
}

message SendEmailRequest {
    Email email = 1;
}

message MailingError {
    optional int32 statusCode = 1;
    optional string message = 2;
}

message SendEmailResponse {
    bool ok = 1;
    optional MailingError mailingError = 2;
}

message Email {
    EmailContent content = 1;
    EmailRecipients recipients = 2;
    string senderAddress = 3;
    bool disableUserEngagementTracking = 4;
    repeated EmailAddress replyTo = 5;
    repeated EmailAttachment attachments = 6;
    map<string, string> headers = 7;
}

message EmailContent {
    string subject = 1;
    optional string html = 2;
    optional string plainText = 3; 
}

message EmailRecipients {
    repeated EmailAddress to = 1;
    repeated EmailAddress cc = 2;
    repeated EmailAddress bcc = 3;
}

message EmailAddress {
    string address = 1;
    optional string displayName = 2;
}

message EmailAttachment {
    string contentInBase64 = 1;
    string contentType = 2; 
    string name = 3;
}
